Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xavia-ota
  namespace: xavia-ota
  labels:
    app: xavia-ota
spec:
  replicas: 3 # Start with 3, scale up to 5+ as needed
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: xavia-ota
  template:
    metadata:
      labels:
        app: xavia-ota
    spec:
      containers:
      - name: xavia-ota
        image: achebeh/xavia-ota
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "1000m"
          limits:
            memory: "1Gi"
            cpu: "1500m"
