Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xavia-ota-service
  namespace: xavia-ota
  labels:
    app: xavia-ota
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: xavia-ota
